# git-tree

./: Cargo.toml  Dioxus.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: app-image-deploy.yml  build-android.yml  build-linux.yml  build-windows.yml  deploy-android.yml  deploy-linux.yml  deploy-windows.yml  rust.yml  test.yml
Scripts/: install.sh
assets/: style.css
assets/css/: diff_viewer.css  left_panel.css  panel_shared.css  right_panel.css  stats.css  style.css
scripts/: build-appimage.sh
src/: app.rs  main.rs  recent.rs  settings_store.rs  theme.rs  updater.rs
src/assets/: style.css
src/components/: diff_viewer.rs  home_screen.rs  left_panel.rs  mod.rs  right_panel.rs  settings.rs  stats.rs  toolbar.rs  tree_canvas.rs  user_repos.rs
src/git/: auth.rs  export.rs  loader.rs  mod.rs  parser.rs  search.rs  url.rs
wix/: License.rtf  main.wxs
