[package]
name = "git-tree"
version = "0.1.0"
edition = "2021"
authors = ["MahiroJV"]
description = "A terminal-style git branch visualizer"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }

# Git operations (local + remote clone)
git2 = "0.19"

# Config file (~/.config/git-tree/config.toml)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# App data directories (cross-platform config path)
dirs = "5"

# Unique colors per contributor (hash name → color)
sha2 = "0.10"

# Date/time formatting
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
image = "0.25.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
