[package]
name = "git-tree-viz"
version = "0.2.5"
edition = "2021"
authors = ["MahiroJV"]
description = "A terminal-style git branch visualizer"
license = "MIT"
repository = "https://github.com/MahiroJV/git-tree"
homepage = "https://github.com/MahiroJV/git-tree"
keywords = ["git", "visualizer", "terminal", "dioxus", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["assets/fonts/*.ttf", ".idea/"]

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
rfd = "0.12"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
tokio = { version = "1.52.0", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
image = "0.25.10"
web-sys = { version = "0.3.97", features = ["Navigator"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
openssl = { version = "0.10", features = ["vendored"] }
webbrowser = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[[bin]]
name = "git-tree"
path = "src/main.rs"
